Priyansh added Text changes

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1{
     margin: 50px auto 0 auto;  
     font-family: 'Sacramento', cursive;
     font-size: 5.625rem;
-    color:  #4563BF;
+    color:  #7185bf;
 }
 
 h2{
